--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "test": "echo \"Error: no test specified\" && exit 1",
         "build": "webpack",
         "dev": "webpack-dev-server --mode development",
-        "lint": "standard"
+        "lint": "standard --fix"
     },
     "repository": {
         "type": "git",
@@ -33,7 +33,8 @@
     },
     "dependencies": {
         "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+        "styled-components": "^5.3.5"
     },
     "standard": {
         "ignore": [
@@ -41,6 +42,8 @@
         ]
     },
     "eslintConfig": {
-      "extends": ["./node_modules/standard/eslintrc.json"]
+        "extends": [
+            "./node_modules/standard/eslintrc.json"
+        ]
     }
 }
